add rules section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header>
       <button><i class="fas fa-angle-double-right"></i>Zasady gry</button>
       <h1>gra "papier, kamień, nożyczki"</h1>
+
     </header>
     <main>
       <h2>Co wybierasz? </h2>
@@ -51,6 +52,14 @@
       <p>&copy wronkowo 2019</p>
     </footer>
   </div>
+  <div class="rules">
+    <h2>zasady gry</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, fugiat cupiditate praesentium totam
+      assumenda veritatis a dolorum reiciendis illum ullam doloribus tempora temporibus aliquid, unde magnam ab.
+      Minus, veritatis tempore!</p>
+    <i class="fas fa-times"></i>
+  </div>
+  <script src="main.js"></script>
 </body>
 
 </html>
