add statistic and logic who win

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="scores">
         <h2>statystyki</h2>
         <div class="statistic">
-          <h3>Liczba gier: <span id="game">0</span></h3>
+          <h3>Liczba gier: <span id="game"></span></h3>
           <h3>Wygranych:<span id="winner">0</span></h3>
           <h3>Przegranych:<span id="looser">0</span></h3>
           <h3>Remisów:<span id="draw">0</span></h3>
