--- a/index.html
+++ b/index.html
@@ -54,10 +54,19 @@
   </div>
   <div class="rules">
     <h2>zasady gry</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, fugiat cupiditate praesentium totam
-      assumenda veritatis a dolorum reiciendis illum ullam doloribus tempora temporibus aliquid, unde magnam ab.
-      Minus, veritatis tempore!</p>
-    <i class="fas fa-times"></i>
+    <p>Gra składa się z kolejnych tur. W każdej turze obydwaj gracze, na umówiony sygnał, szybko wystawiają przed siebie
+      dłoń, pokazującą symbol papieru, kamienia lub nożyc. Gracz, który pokazał silniejszy symbol, otrzymuje jeden
+      punkt. W przypadku pokazania dwóch takich samych symboli następuje remis – punktu brak. Oto hierarchia symboli:
+      <ul>
+        <li><i class="fas fa-arrow-right"></i>nożyce są silniejsze od papieru, ponieważ go tną,</li>
+        <li><i class="fas fa-arrow-right"></i>kamień jest silniejszy od nożyc, ponieważ je tępi,</li>
+        <li><i class="fas fa-arrow-right"></i>papier jest silniejszy od kamienia, ponieważ go owija.</li>
+      </ul>
+      <span>Źródło: wikipedia.pl</span>
+    </p>
+
+    <span><i class="fas fa-times"></i></span>
+
   </div>
   <script src="rules.js"></script>
   <script src="main.js"></script>
