--- a/index.html
+++ b/index.html
@@ -9,47 +9,54 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="container">
     <header>
-      <button><i class="fas fa-angle-double-right"></i>Zasady gry</button>
       <h1>gra "papier, kamień, nożyczki"</h1>
-
+      <button><i class="fas fa-angle-double-right"></i>Zasady gry</button>
     </header>
     <main>
-      <h2>Co wybierasz? </h2>
-      <section class="chooseHand">
-        <i class="fas fa-hand-paper" data-option="papier"></i>
-        <i class="fas fa-hand-rock" data-option="kamień"></i>
-        <i class="fas fa-hand-scissors" data-option="nożyczki"></i>
-      </section>
-
-      <section class="play">
-        <button>GRAJ</button>
-      </section>
-
-      <section class="game">
-        <h3>Twoj wybór: <span id="playerChoose"></span></h3>
-        <h3>Wybór komputera: <span id="aiChoose"></span></h3>
-        <h2 id="whoWin">Wygrasz czy przegrasz?</h2>
-      </section>
-      <section class="scores">
-        <h2>statystyki</h2>
-        <div class="statistic">
-          <h3>Liczba gier: <span id="game"></span></h3>
-          <h3>Wygranych:<span id="winner">0</span></h3>
-          <h3>Przegranych:<span id="looser">0</span></h3>
-          <h3>Remisów:<span id="draw">0</span></h3>
+      <section class="choose-hand">
+        <h1>Wybierz swoją dłoń</h1>
+        <div class="hands-container">
+          <i class="fas fa-hand-paper" data-option="papier"></i>
+          <i class="fas fa-hand-rock" data-option="kamień"></i>
+          <i class="fas fa-hand-scissors" data-option="nożyczki"></i>
         </div>
-
+      </section>
+      <section class="play">
+        <button> zagraj</button>
+      </section>
+      <section class="choosed-option">
+        <div class="box">
+          <h1>Twój wybór:</h1><span>player</span>
+        </div>
+        <div class="box">
+          <h1>Wybór komputera:</h1> <span>ai</span>
+        </div>
+      </section>
+      <section class="statistic">
+        <h1>STATYSTYKI</h1>
+        <div class="box">
+          <h1>Liczba gier:</h1> <span>0</span>
+        </div>
+        <div class="box">
+          <h1>Gier wygranych:</h1> <span>0</span>
+        </div>
+        <div class="box">
+          <h1>Gier przegranych</h1> <span>0</span>
+        </div>
+        <div class="box">
+          <h1>Remisów</h1> <span>0</span>
+        </div>
       </section>
     </main>
+
     <footer>
-      <p>&copy wronkowo 2019</p>
+      <p><a href="https://github.com/wronkowa">&copy wronkowa <span class="year">ROK</span></a></p>
     </footer>
   </div>
   <div class="rules">
