--- a/index.html
+++ b/index.html
@@ -32,25 +32,28 @@
       </section>
       <section class="choosed-option">
         <div class="box">
-          <h1>Twój wybór:</h1><span>player</span>
+          <h1>Twój wybór:</h1><span id="player-pick"></span>
         </div>
         <div class="box">
-          <h1>Wybór komputera:</h1> <span>ai</span>
+          <h1>Wybór komputera:</h1> <span id="ai-pick"></span>
         </div>
+      </section>
+      <section class="winner">
+        <h1></h1>
       </section>
       <section class="statistic">
         <h1>STATYSTYKI</h1>
         <div class="box">
-          <h1>Liczba gier:</h1> <span>0</span>
+          <h1>Liczba gier:</h1> <span id="games">0</span>
         </div>
         <div class="box">
-          <h1>Gier wygranych:</h1> <span>0</span>
+          <h1>Gier wygranych:</h1> <span id="wins">0</span>
         </div>
         <div class="box">
-          <h1>Gier przegranych</h1> <span>0</span>
+          <h1>Gier przegranych</h1> <span id="looses">0</span>
         </div>
         <div class="box">
-          <h1>Remisów</h1> <span>0</span>
+          <h1>Remisów</h1> <span id="draws">0</span>
         </div>
       </section>
     </main>
